--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -1451,6 +1451,25 @@ def PerformDir(env, testdir, testlist, total_tests, test_progress) :
             interrupted = True
         finally:
             if pSrvr is not None:
+                try:
+                    dbh = pymonetdb.connect(username='monetdb',
+                                            password='monetdb',
+                                            hostname=HOST,
+                                            port=int(pSrvr.port),
+                                            database=TSTDB,
+                                            autocommit=True)
+                except KeyboardInterrupt:
+                    interrupted = True
+                except:
+                    pass
+                else:
+                    crs = dbh.cursor()
+                    crs.execute("select count(*), max(id) from sys.bbp()")
+                    nbats, maxid = crs.fetchall()[0]
+                    crs.close()
+                    dbh.close()
+                    if maxid > nbats and maxid - nbats > 10000:
+                        pSrvr.outfile.write(f'Too many free bats.  Max ID = {maxid}, # used = {nbats}, diff = {maxid - nbats}.')
                 pSrvr.terminate()
                 pSrvr = None
                 if produce_html:
