--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -1469,7 +1469,8 @@ def PerformDir(env, testdir, testlist, total_tests, test_progress) :
                     crs.close()
                     dbh.close()
                     if maxid > nbats and maxid - nbats > 10000:
-                        pSrvr.outfile.write(f'Too many free bats.  Max ID = {maxid}, # used = {nbats}, diff = {maxid - nbats}.')
+                        pSrvr.outfile.write(f'Too many free bats.  Max ID = {maxid}, # used = {nbats}, diff = {maxid - nbats}.\n')
+                        pSrvr.sendusr1()
                 pSrvr.terminate()
                 pSrvr = None
                 if produce_html:
@@ -2623,6 +2624,11 @@ class ServerClass:
             self.outfile.write(self.proc.stdout.read())
         self.outfile.close()
         self.errfile.close()
+
+    def sendusr1(self):
+        if os.name != 'nt':
+            self.proc.send_signal(signal.SIGUSR1)
+            time.sleep(1)
 
     def LaunchIt(self):
         global setpgrp
