When running 'Mtest.py -v' also print summary and time information at the end (as done when running 'Mtest.py')

--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -4271,7 +4271,7 @@ VALUES (%s, '%s', '%s', '%s',
                 for f in Failure[x]:
                     what += "        %s\n" % f
         print(file=sys.stderr, end='', flush=True)
-        if verbosity == 0:
+        if verbosity == 0 or verbosity == 1:
             if Failed or errseen:
                 prred('ERROR')
             else:
