--- a/monetdb_config.h.in
+++ b/monetdb_config.h.in
@@ -122,6 +122,7 @@
 
 #cmakedefine HAVE_DIRENT_H 1
 #cmakedefine HAVE_SYS_SOCKET_H 1
+#cmakedefine HAVE_GETTID 1
 #cmakedefine HAVE_GETTIMEOFDAY 1
 #cmakedefine HAVE_SYS_STAT_H 1
 #cmakedefine HAVE_FDATASYNC 1
