lets first try to get ubuntu back..

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -48,7 +48,7 @@ jobs:
           ref: ${{ github.ref }}
 
       - name: install pymonetdb cryptography
-        run: pip3 install --user --break-system-packages --upgrade pymonetdb cryptography
+        run: pip3 install --user --upgrade pymonetdb cryptography
 
       - name: make MonetDB on linux
         run: |
