--- a/monetdb5/extras/rapi/CMakeLists.txt
+++ b/monetdb5/extras/rapi/CMakeLists.txt
@@ -51,19 +51,19 @@ if(LIBR_FOUND)
   install(TARGETS
     rapi
     DESTINATION
-    ${CMAKE_INSTALL_LIBDIR}/monetdb5
+    ${CMAKE_INSTALL_LIBDIR}/monetdb5${MONETDB_VERSION}
     COMPONENT rapi)
 
   install(FILES
     rapi.R
     DESTINATION
-    ${CMAKE_INSTALL_LIBDIR}/monetdb5
+    ${CMAKE_INSTALL_LIBDIR}/monetdb5${MONETDB_VERSION}
     COMPONENT rapi)
 
   if(WIN32)
     install(FILES
       $<TARGET_PDB_FILE:rapi>
-      DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5
+      DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5${MONETDB_VERSION}
       OPTIONAL)
   endif()
 endif()
