--- a/sql/backends/monet5/UDF/udf/CMakeLists.txt
+++ b/sql/backends/monet5/UDF/udf/CMakeLists.txt
@@ -64,10 +64,10 @@ set_target_properties(udf
 install(TARGETS
   udf
   LIBRARY
-  DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5${MONETDB_VERSION}
   COMPONENT server
   ARCHIVE
-  DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5${MONETDB_VERSION}
   PUBLIC_HEADER
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/monetdb
   INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
@@ -75,6 +75,6 @@ install(TARGETS
 if(WIN32)
   install(FILES
     $<TARGET_PDB_FILE:udf>
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5${MONETDB_VERSION}
     OPTIONAL)
 endif()
