Use CMake target property to create versioned binary + symlink. Also, add a dash to the .so names before the version number so that they look like the names CMake uses for the binaries.

--- a/clients/mapiclient/CMakeLists.txt
+++ b/clients/mapiclient/CMakeLists.txt
@@ -83,6 +83,10 @@ target_link_libraries(msqldump
   mprompt
   $<$<PLATFORM_ID:Windows>:${GETOPT_LIB}>)
 
+set_target_properties(mclient msqldump
+  PROPERTIES
+  VERSION ${MONETDB_VERSION})
+
 install(TARGETS
   mclient
   msqldump
