--- a/sql/backends/monet5/UDF/capi/CMakeLists.txt
+++ b/sql/backends/monet5/UDF/capi/CMakeLists.txt
@@ -47,10 +47,10 @@ if(CINTEGRATION)
   install(TARGETS
     capi
     LIBRARY
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5${MONETDB_VERSION}
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5-${MONETDB_VERSION}
     COMPONENT server
     ARCHIVE
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5${MONETDB_VERSION}
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5-${MONETDB_VERSION}
     PUBLIC_HEADER
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/monetdb
     INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
@@ -58,7 +58,7 @@ if(CINTEGRATION)
   if(WIN32)
     install(FILES
       $<TARGET_PDB_FILE:capi>
-      DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5${MONETDB_VERSION}
+      DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5-${MONETDB_VERSION}
       OPTIONAL)
   endif()
 endif()
