--- a/sql/backends/monet5/vaults/fits/CMakeLists.txt
+++ b/sql/backends/monet5/vaults/fits/CMakeLists.txt
@@ -60,13 +60,13 @@ if(HAVE_FITS)
 
   install(TARGETS fits
     DESTINATION
-    ${CMAKE_INSTALL_LIBDIR}/monetdb5${MONETDB_VERSION}
+    ${CMAKE_INSTALL_LIBDIR}/monetdb5-${MONETDB_VERSION}
     COMPONENT fits)
 
   if(WIN32)
     install(FILES
       $<TARGET_PDB_FILE:fits>
-      DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5${MONETDB_VERSION}
+      DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5-${MONETDB_VERSION}
       OPTIONAL)
   endif()
 endif()
