--- a/tools/merovingian/daemon/CMakeLists.txt
+++ b/tools/merovingian/daemon/CMakeLists.txt
@@ -43,6 +43,10 @@ target_link_libraries(monetdbd
   msabaoth
   Threads::Threads)
 
+set_target_properties(monetdbd
+  PROPERTIES
+  VERSION ${MONETDB_VERSION})
+
 install(TARGETS
   monetdbd
   RUNTIME
