--- a/tools/merovingian/daemon/config/monetdbd.service.in
+++ b/tools/merovingian/daemon/config/monetdbd.service.in
@@ -7,8 +7,8 @@ After=network.target
 Type=forking
 User=monetdb
 Group=monetdb
-ExecStart=@CMAKE_INSTALL_FULL_BINDIR@/monetdbd start @CMAKE_INSTALL_FULL_LOCALSTATEDIR@/monetdb5/dbfarm
-ExecStop=@CMAKE_INSTALL_FULL_BINDIR@/monetdbd stop @CMAKE_INSTALL_FULL_LOCALSTATEDIR@/monetdb5/dbfarm
+ExecStart=@CMAKE_INSTALL_FULL_BINDIR@/monetdbd-@MONETDB_VERSION@ start @CMAKE_INSTALL_FULL_LOCALSTATEDIR@/monetdb5/dbfarm
+ExecStop=@CMAKE_INSTALL_FULL_BINDIR@/monetdbd-@MONETDB_VERSION@ stop @CMAKE_INSTALL_FULL_LOCALSTATEDIR@/monetdb5/dbfarm
 Restart=on-failure
 PIDFile=@CMAKE_INSTALL_FULL_RUNSTATEDIR@/monetdb/merovingian.pid
 PrivateDevices=no
