--- a/clients/NT/mclient.bat.in
+++ b/clients/NT/mclient.bat.in
@@ -16,7 +16,7 @@ rem remove the final backslash from the path
 set MONETDB=%MONETDB:~0,-1%
 
 rem extend the search path with our EXE and DLL folders
-set PATH=%MONETDB%\bin;%MONETDB%\lib\monetdb5@MONETDB_VERSION@;%PATH%
+set PATH=%MONETDB%\bin;%MONETDB%\lib\monetdb5-@MONETDB_VERSION@;%PATH%
 
 if not "%1"=="/STARTED-FROM-MENU" goto skip
 shift
